[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/game/GameScene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="2"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1")

[node name="TileRoot" type="Node2D" parent="."]

[node name="CoinRoot" type="Node2D" parent="."]

[node name="CheckpointRoot" type="Node2D" parent="."]

[node name="EnemyRoot" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("res://scripts/player/Player.gd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

[node name="AttackArea" type="Area2D" parent="Player"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackArea"]

[node name="JetpackFlame" type="Node2D" parent="Player"]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="HUDLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="HealthBar" type="ProgressBar" parent="HUDLayer/HUD"]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 24.0
max_value = 3.0
value = 3.0

[node name="CoinLabel" type="Label" parent="HUDLayer/HUD"]
anchors_preset = 1
offset_left = 8.0
offset_top = 30.0
offset_right = 120.0
offset_bottom = 50.0
text = "0 / 10"

[node name="TimerLabel" type="Label" parent="HUDLayer/HUD"]
anchors_preset = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 28.0
text = "1:30"
horizontal_alignment = 2

[node name="JetpackBar" type="ProgressBar" parent="HUDLayer/HUD"]
anchors_preset = 1
offset_left = 8.0
offset_top = 56.0
offset_right = 100.0
offset_bottom = 70.0
max_value = 100.0
value = 100.0

[node name="DashCdBar" type="ProgressBar" parent="HUDLayer/HUD"]
anchors_preset = 1
offset_left = 8.0
offset_top = 74.0
offset_right = 100.0
offset_bottom = 88.0
max_value = 100.0
value = 100.0

[node name="ShieldLabel" type="Label" parent="HUDLayer/HUD"]
anchors_preset = 1
offset_left = 8.0
offset_top = 90.0
offset_right = 120.0
offset_bottom = 110.0
text = "Shield: 0"

[node name="PauseMenu" type="Control" parent="HUDLayer/HUD"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseBG" type="ColorRect" parent="HUDLayer/HUD/PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBox" type="VBoxContainer" parent="HUDLayer/HUD/PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = 60.0

[node name="ResumeButton" type="Button" parent="HUDLayer/HUD/PauseMenu/VBox"]
text = "Resume"

[node name="MenuButton" type="Button" parent="HUDLayer/HUD/PauseMenu/VBox"]
text = "Main Menu"
